src/main/resources/manifest/Dev/orderService.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: ord
  ports:
  - port: 9001
    targetPort: 1111
