src/main/resources/manifest/Dev/order-ingrestwo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: abc123abc123cde.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: orderservice
            port: 
              number: 3511
